# espresso

./: .gitlab-ci.yml  CMakeLists.txt  requirements.txt
.github/actions/build_and_check/: action.yml
.github/workflows/: push_pull.yml
cmake/: FindCUDACompilerClang.cmake  espresso_cmake_config.cmakein  patch_cabana_doxygen.diff  walberla.patch
doc/sphinx/: Readme.rst
doc/tutorials/: CMakeLists.txt  convert.py
doc/tutorials/active_matter/: CMakeLists.txt
doc/tutorials/charged_system/: CMakeLists.txt
doc/tutorials/constant_pH/: CMakeLists.txt
doc/tutorials/electrodes/: CMakeLists.txt
doc/tutorials/electrokinetics/: CMakeLists.txt  electrokinetics.ipynb
doc/tutorials/error_analysis/: CMakeLists.txt
doc/tutorials/ferrofluid/: CMakeLists.txt
doc/tutorials/grand_canonical_monte_carlo/: CMakeLists.txt
doc/tutorials/langevin_dynamics/: CMakeLists.txt  langevin_dynamics.ipynb
doc/tutorials/lattice_boltzmann/: CMakeLists.txt
doc/tutorials/lennard_jones/: CMakeLists.txt
doc/tutorials/mlip/: CMakeLists.txt
doc/tutorials/polymers/: CMakeLists.txt  polymers.ipynb
doc/tutorials/raspberry_electrophoresis/: CMakeLists.txt
doc/tutorials/visualization/: CMakeLists.txt
doc/tutorials/widom_insertion/: CMakeLists.txt
maintainer/CI/: build_cmake.sh
maintainer/benchmarks/: lb.py
maintainer/format/: clang-format.sh
maintainer/walberla_kernels/: generate_lb_kernels.py
samples/: diffusion_coefficient.py
src/config/: features.def
src/core/: CMakeLists.txt  MpiCallbacks.hpp  TabulatedPotential.hpp  cabana_data.hpp  cells.cpp  communication.cpp  custom_verlet_list.hpp  energy.cpp  exclusions.hpp  forces.cpp  forces_inline.hpp  particle_node.cpp  pressure_inline.hpp  random.hpp  rattle.cpp  short_range_cabana.cpp  short_range_cabana.hpp  virtual_sites.cpp
src/core/accumulators/: Correlator.cpp
src/core/bond_breakage/: bond_breakage.hpp
src/core/bonded_interactions/: angle_common.hpp  bonded_interaction_data.cpp  bonded_interaction_data.hpp
src/core/cell_system/: CMakeLists.txt  Cell.hpp  CellStructure.cpp  CellStructure.hpp  HybridDecomposition.cpp
src/core/cluster_analysis/: Cluster.cpp  ClusterStructure.cpp
src/core/constraints/: Constraints.hpp  ShapeBasedConstraint.cpp
src/core/cuda/: init.cpp  init_cuda.cu
src/core/ek/: EKReactions.hpp
src/core/electrostatics/: elc.cpp  p3m.cpp  p3m.hpp  p3m.impl.hpp  p3m_gpu_cuda.cu  scafacos_impl.cpp
src/core/error_handling/: RuntimeErrorCollector.cpp
src/core/galilei/: ComFixed.hpp
src/core/lb/: LBWalberla.cpp
src/core/magnetostatics/: dp3m.cpp  dp3m.impl.hpp
src/core/observables/: PidObservable.hpp  fetch_particles.hpp
src/core/p3m/: TuningLogger.hpp
src/core/stokesian_dynamics/: sd_interface.cpp
src/core/system/: System.hpp
src/core/unit_tests/: EspressoSystemStandAlone_test.cpp  ParticleIterator_test.cpp  RuntimeErrorCollector_test.cpp  ek_interface_test.cpp  lb_particle_coupling_test.cpp  random_test.hpp
src/particle_observables/include/particle_observables/: algorithms.hpp
src/python/: CMakeLists.txt  pypresso.cmakein
src/python/espressomd/: analyze.py  code_features.py  electrokinetics.py  interactions.py  lb.py  particle_data.py  visualizer_zndraw.py  zn.py
src/python/espressomd/detail/: walberla.py
src/script_interface/: Context.hpp  GlobalContext.cpp  GlobalContext.hpp  ObjectList.hpp  ObjectMap.hpp
src/script_interface/accumulators/: AutoUpdateAccumulators.hpp
src/script_interface/analysis/: Analysis.cpp
src/script_interface/auto_parameters/: AutoParameters.hpp
src/script_interface/bond_breakage/: BreakageSpecs.hpp
src/script_interface/cell_system/: CellSystem.cpp
src/script_interface/constraints/: Constraints.hpp  fields.hpp
src/script_interface/interactions/: BondedInteraction.hpp  BondedInteractions.hpp  NonBondedInteractions.hpp
src/script_interface/shapes/: Union.hpp
src/script_interface/system/: Leaf.hpp  System.cpp  System.hpp
src/script_interface/tests/: ConstantpHEnsemble_test.cpp  LocalContext_test.cpp  ObjectHandle_test.cpp  ObjectList_test.cpp  ObjectMap_test.cpp  ReactionEnsemble_test.cpp
src/script_interface/walberla/: EKContainer.hpp  EKReaction.hpp  EKReactions.hpp  EKSpecies.cpp  LBFluid.cpp  LBFluidNode.cpp  LatticeWalberla.hpp  VTKHandle.hpp
src/shapes/include/shapes/: Union.hpp
src/shapes/src/: Ellipsoid.cpp
src/utils/include/utils/: Accumulator.hpp  Array.hpp  Vector.hpp  contains.hpp  get.hpp  linear_interpolation.hpp  mask.hpp  matrix.hpp
src/utils/tests/: Array_test.cpp  CMakeLists.txt  Vector_test.cpp  contains_test.cpp  gather_buffer_test.cpp  memcpy_archive_test.cpp  scatter_buffer_test.cpp  serialization_test.cpp
src/walberla_bridge/: CMakeLists.txt
src/walberla_bridge/include/walberla_bridge/: BlockAndCell.hpp  LatticeWalberla.hpp
src/walberla_bridge/src/: BoundaryPackInfo.hpp  LatticeWalberla.cpp
src/walberla_bridge/src/utils/: boundary.hpp  (+1 more)
src/walberla_bridge/tests/: EKinWalberlaImpl_unit_tests.cpp  LBWalberlaImpl_bspline_tests.cpp  LBWalberlaImpl_field_accessors_tests.cu  LBWalberlaImpl_flow_tests.cpp  LBWalberlaImpl_lees_edwards_tests.cpp  LBWalberlaImpl_statistical_tests.cpp  LBWalberlaImpl_unit_tests.cpp  LatticeWalberla_unit_tests.cpp
testsuite/python/: CMakeLists.txt  collision_detection.py  constraint_shape_based.py  coulomb_interface.py  dawaanr-and-dds-gpu.py  ek_interface.py  ibm.py  integrator_langevin_stats.py  interactions_bond_energy.py  interactions_bonded.py  interactions_non-bonded.py  lattice.py  lb.py  lb_boundary.py  lb_boundary_ghost_layer.py  lb_boundary_volume_force.py  lb_circular_couette.py  lb_couette_xy.py  lb_interpolation.py  lb_lees_edwards.py  lb_lees_edwards_particle_coupling.py  lb_mass_conservation.py  lb_momentum_conservation.py  lb_planar_couette.py  lb_poiseuille.py  lb_poiseuille_cylinder.py  lb_pressure_tensor.py  lb_shear.py  lb_slice.py  lb_streaming.py  lb_thermostat.py  mpiio.py  p3m_madelung.py  p3m_tuning_exceptions.py  rotational-diffusion-aniso.py  save_checkpoint.py  sigint.py  test_checkpoint.py  tests_common.py  thermalized_bond.py  (+2 more)
(+19 files in other folders)
